import org.jetbrains.kotlin.gradle.tasks.KotlinCompile

plugins {
    id 'org.springframework.boot' version '3.0.6'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'org.jetbrains.kotlin.jvm' version '1.8.21'
    id 'org.jetbrains.kotlin.plugin.spring' version '1.8.21'
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'com.adarshr.test-logger' version '3.2.0'
    id 'jacoco'
    id "org.sonarqube" version "3.5.0.2730"
    id "io.gitlab.arturbosch.detekt" version "1.23.0"
}

group = 'com.shoppinglist'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '18'


configurations {
    ktlint
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.23.0'
    ktlint "com.pinterest:ktlint:0.49.1"
    // Align versions of all Kotlin components

    implementation 'org.springframework.boot:spring-boot-starter-graphql:3.0.4'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    // https://mvnrepository.com/artifact/com.graphql-java-kickstart/playground-spring-boot-starter
    implementation 'com.graphql-java-kickstart:playground-spring-boot-starter:11.1.0'

    // https://mvnrepository.com/artifact/com.graphql-java-kickstart/playground-spring-boot-starter
    //implementation 'com.graphql-java-kickstart:playground-spring-boot-starter:11.1.0'

    //implementation 'org.springframework.boot:spring-boot-starter-security'

    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
    implementation 'com.h2database:h2'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.jetbrains.kotlin:kotlin-reflect'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
    implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.3')
    implementation 'io.github.microutils:kotlin-logging-jvm:3.0.5'
    implementation 'org.xerial:sqlite-jdbc:3.40.1.0'
    implementation 'org.hibernate.orm:hibernate-community-dialects'
    implementation("com.configcat:configcat-kotlin-client:1.2.1")
    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1")


    configurations.testImplementation.exclude(group: 'me.paulschwarz', module: 'spring-dotenv')

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.mockito', module: 'mockito-core'
        exclude group: 'org.mockito', module: 'mockito-junit-jupiter'
    }
    testImplementation 'io.kotest:kotest-runner-junit5:5.6.1'
    testImplementation("io.kotest.extensions:kotest-extensions-spring:1.1.2")
    testImplementation 'com.ninja-squad:springmockk:4.0.2'
    testImplementation 'org.springframework:spring-webflux'
    testImplementation 'org.springframework.graphql:spring-graphql-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.assertj:assertj-core:3.24.2'
    testImplementation 'org.jetbrains.kotlin:kotlin-test'
    testImplementation 'io.cucumber:cucumber-java:7.11.1'
    testImplementation 'io.cucumber:cucumber-junit:7.11.1'
    testImplementation 'org.junit.vintage:junit-vintage-engine:5.9.2'
    testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.11.1'
    testImplementation 'io.cucumber:cucumber-spring:7.11.1'
    testImplementation 'com.github.tomakehurst:wiremock:3.0.0-beta-8'
    testImplementation 'org.springframework.graphql:spring-graphql-test:1.2.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-webflux'

}

task installGitHook(type: Copy, group: "git-hooks") {
    from new File(rootProject.rootDir, 'scripts/pre-commit')
    into { new File(rootProject.rootDir, '.git/hooks')}
    fileMode 0775
}


check.dependsOn installGitHook // we should remove it, surely we don't need it

tasks.withType(KotlinCompile) {
    kotlinOptions {
        freeCompilerArgs = ['-Xjsr305=strict']
        jvmTarget = '18'
    }
}

tasks.named('test') {
    testlogger {
        useJUnitPlatform()
    }
}

task ktlint(type: JavaExec, group: "verification") {
    description = "Check Kotlin code style."
    classpath = configurations.ktlint
    mainClass = "com.pinterest.ktlint.Main"
    args "src/**/*.kt"
}
check.dependsOn ktlint // we should remove it, surely we don't need it

task ktlintFormat(type: JavaExec, group: "verification") {
    jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
    description = "Fix Kotlin code style deviations."
    classpath = configurations.ktlint
    mainClass = "com.pinterest.ktlint.Main"
    args "-F", "src/**/*.kt"
}

jacocoTestReport {
    dependsOn test
    executionData tasks.withType(Test).findAll { it.state.executed }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [])
        }))
    }
    reports {
        xml.setEnabled(true)
        html.setEnabled(true)
        html.destination file("${buildDir}/jacocoHtml")
    }
}

jacocoTestCoverageVerification {
    dependsOn test
    executionData tasks.withType(Test).findAll { it.state.executed }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [])
        }))
    }
    violationRules {
        rule {
            limit {
                counter = 'INSTRUCTION'
                minimum = 0.8
            }
            limit {
                counter = 'BRANCH'
                minimum = 0.8
            }
            limit {
                counter = 'LINE'
                minimum = 0.8
            }
            limit {
                counter = 'METHOD'
                minimum = 0.8
            }
            limit {
                counter = 'CLASS'
                minimum = 0.8
            }
        }
    }
}

sonar {
    properties {
        property "sonar.projectKey", "danielvillahermosadominguez_shopping_list_backend_kot"
        property "sonar.organization", "danielvillahermosadominguez"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.projectVersion", "latest"
        property "sonar.sources", "src/main/kotlin"
        property "sonar.tests", "src/test/kotlin"
        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
        property "sonar.junit.reportsPath", "build/test-results/test/TEST-*.xml"
    }
}

detekt {
    config = files("$projectDir/config/detekt/detekt.yml")
    input = files("src/main/java", "src/main/kotlin")
}